# BuilderOps

./: .gitignore  README.md
.github/actions/compute-tag/: action.yml
.github/actions/ensure-acr/: action.yml
.github/workflows/: build-and-test.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/api/: repos.py  sync.py
backend/app/connectors/: ado_connector.py  ado_pipelines_connector.py  ado_test_plans_connector.py  github_connector.py
backend/app/services/: complexity.py  readiness.py  readiness_pipeline.py  readiness_store.py  stage.py  sync_service.py  test_readiness.py
backend/tests/: conftest.py  test_config.py  test_models.py  test_scheduler.py
backend/tests/api/: test_health.py  test_repos_api.py  test_sync_api.py
backend/tests/connectors/: test_ado_connector.py  test_ado_pipelines_connector.py  test_ado_test_plans_connector.py  test_github_connector.py
backend/tests/services/: test_complexity.py  test_e2e_readiness.py  test_readiness.py  test_readiness_pipeline.py  test_readiness_store.py  test_stage.py  test_sync_service.py  test_test_readiness.py
docs/runbooks/: azure-cicd-bootstrap.md
docs/superpowers/plans/: 2026-07-07-repo-standardization-backend.md  2026-07-08-backend-api-extensions.md  2026-07-08-cicd-piped-frontend.md  (+7 more)
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/tests/: App.test.tsx
(+42 files in other folders)
